css links fixed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <h1><span class="fa fa-question"></span></h1>
                 </button>
 
+                <button id="third-button" class="btn btn-primary btn-lg">
+                    <h1><span class="fa fa-question"></span></h1>
+                </button>
+
             </div>
 
         </div>
