--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
             </div>
 
+            <div class="info">
+                <h1>You get three tries</h1>
+                <h1>Win by reaching a number closest to 400</h1>
+            </div>
+
         </div>
 
         <script src="javascript.js"></script>
