--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 
         <div class="jumbotron">
 
-            <h1 class="text-center">Generate a Random Number!</h1>
+            <h1 class="text-center">Generate A Random Number!</h1>
+
+
+            <div class="info">
+                <h1>Win by reaching a number closest to 400</h1>
+            </div>
 
             <div class="text-center">
 
@@ -45,10 +50,6 @@
 
             </div>
 
-            <div class="info">
-                <h1>You get three tries</h1>
-                <h1>Win by reaching a number closest to 400</h1>
-            </div>
 
         </div>
 
